# codejam-grand-geckos

./: .gitignore  .pre-commit-config.yaml  LICENCE  NOTICE.md  README.md  pyproject.toml  setup.cfg  worker.db
.github/workflows/: lint.yaml  test.yaml  test.yaml.disabled
grand-geckos/: __main__.py  features.py
grand_geckos/: __main__.py  ui.py
grand_geckos/database/: DBWorker.py  __init__.py  example_db.py  exceptions.py  models.py
grand_geckos/duckylint/: lint.py
grand_geckos/static/: __init__.py  words.py
grand_geckos/ui/: __init__.py  app.py  auth.py  bindings.py  controls.py  core.py  dashboard.py  layout.py  shortcuts.py  style.py  widgets.py
grand_geckos/utils/: __init__.py  auth_handler.py  lint.py  password_checker.py  password_generator.py
tests/utils/: test_password_checker.py  test_password_generator.py
