[tool.poetry]
name = "grand_geckos"
version = "0.1.0"
description = ""
authors = ["Sofi <imsofi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prompt-toolkit = "^3.0.19"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.2"
pre-commit = "^2.13.0"
taskipy = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.taskipy.tasks]
main = "python -m grand_geckos"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
